--- a/index.mdx
+++ b/index.mdx
@@ -3,6 +3,8 @@ title: "Welcome to PUG"
 description: "Welcome to the new home for your documentation"
 ---
 
+![PUG Banner](/Users/janani/Documents/PUG/docs/images/pug-banner.png)
+
 ## Setting up
 
 Get your documentation site up and running in minutes.
