--- a/index.mdx
+++ b/index.mdx
@@ -3,7 +3,7 @@ title: "Welcome to PUG"
 description: "Welcome to the new home for your documentation"
 ---
 
-![PUG Banner](/Users/janani/Documents/PUG/docs/images/pug-banner.png)
+![PUG Banner](images/pug-banner.png)
 
 ## Setting up
 
