changes to the quickstart part on docs

--- a/index.mdx
+++ b/index.mdx
@@ -18,10 +18,10 @@ Get your documentation site up and running in minutes.
 Understand how to connect & export from PUG, and edit in your IDE
 
 <Columns cols={2}>
-  <Card title="Export & Integrations" icon="pen-to-square" href="/development">
+  <Card title="Export & Integrations" icon="pen-to-square" href="/overview">
     Connect and export to Confluence, Notion, or where ever your company stores docs
   </Card>
-  <Card title="IDE Editor" icon="palette" href="/essentials/settings">
+  <Card title="CLI Installation" icon="palette" href="/cli-install">
     Customize the design of your diagrams on the IDE itself
   </Card>
 </Columns>
