--- a/overview.mdx
+++ b/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "Preview changes locally to update your docs"
+title: "Export & Integrations"
+description: "Export docs to whereever your company stores them"
 ---
 
 <Info>
