--- a/cli-install.mdx
+++ b/cli-install.mdx
@@ -2,12 +2,10 @@
 title: "CLI Installation"
 description: "Install PUG using CLI"
 ---
-![PUG Banner](images/pug-banner.png)
 
-## Setting up
+## Cursor
+```bash
+cursor —install-extension PUG.pug-ai
+```
 
-Get your documentation site up and running in minutes.
 
-<Card title="Start here" icon="rocket" horizontal href="/quickstart">
-  Follow our quickstart guide.
-</Card>
