--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -22,28 +22,22 @@ description: "Start building awesome documentation in minutes"
 ### Step 2: Configure PUG
 
 <AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
+  <Accordion icon="github" title="Part 3: Use the PUG token">
+    1. Open the extension on your IDE using the shortcut **Command+Shift+D** on Mac (or **Ctrl+Shift+D** on Windows/Linux)
+    2. Paste PUG token
+    3. Select which folder name your want the docs to be stored in on your IDE
+    ![Select Folder](images/selectfolder.png)
+
+    <Tip>You can give the folder anyname, it doesn't matter</Tip>
+
+    **_Installation Finished!_**
 </Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
-
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
-
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-
-  </Accordion>
 </AccordionGroup>
 
 
 ## Next steps
 
-Now that you have your docs running, explore these key features:
+Now that you have PUG installed, explore these key features:
 
 <CardGroup cols={2}>
 
