finished cli page

--- a/cli-install.mdx
+++ b/cli-install.mdx
@@ -8,4 +8,12 @@ description: "Install PUG using CLI"
 cursor —install-extension PUG.pug-ai
 ```
 
+## VS Code
+```bash
+code —install-extension PUG.pug-ai
+```
 
+## Windsurf
+```bash
+windsurf —install-extension PUG.pug-ai
+```
