--- a/overview.mdx
+++ b/overview.mdx
@@ -1,99 +1,54 @@
 ---
 title: "Export & Integrations"
-description: "Export docs to whereever your company stores them"
+description: "Share your PUG documentation across any platform your team uses. Generate once, export everywhere."
 ---
 
-<Info>
-  **Prerequisites**: - Node.js version 19 or higher - A docs repository with a
-  `docs.json` file
-</Info>
+## Quick Export (No setup)
+1. HTML export
+2. PDF Export
 
-Follow these steps to install and run Mintlify on your operating system.
-
-<Steps>
-<Step title="Install the Mintlify CLI">
-
-```bash
-npm i -g mint
-```
-
-</Step>
-
-<Step title="Preview locally">
-
-Navigate to your docs directory where your `docs.json` file is located, and run the following command:
-
-```bash
-mint dev
-```
-
-A local preview of your documentation will be available at `http://localhost:3000`.
-
-</Step>
-</Steps>
-
-## Custom ports
-
-By default, Mintlify uses port 3000. You can customize the port Mintlify runs on by using the `--port` flag. For example, to run Mintlify on port 3333, use this command:
-
-```bash
-mint dev --port 3333
-```
-
-If you attempt to run Mintlify on a port that's already in use, it will use the next available port:
-
-```md
-Port 3000 is already in use. Trying 3001 instead.
-```
-
-## Mintlify versions
-
-Please note that each CLI release is associated with a specific version of Mintlify. If your local preview does not align with the production version, please update the CLI:
-
-```bash
-npm mint update
-```
-
-## Validating links
-
-The CLI can assist with validating links in your documentation. To identify any broken links, use the following command:
-
-```bash
-mint broken-links
-```
-
-## Deployment
-
-If the deployment is successful, you should see the following:
-
-<Frame>
-  <img
-    src="/images/checks-passed.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius: "0.5rem" }}
-  />
-</Frame>
-
-## Code formatting
-
-We suggest using extensions on your IDE to recognize and format MDX. If you're a VSCode user, consider the [MDX VSCode extension](https://marketplace.visualstudio.com/items?itemName=unifiedjs.vscode-mdx) for syntax highlighting, and [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode) for code formatting.
-
-## Troubleshooting
+### Confluence Integration
+Export directly to your team’s Confluence wiki with automatic organization.
 
 <AccordionGroup>
-  <Accordion title='Error: Could not load the "sharp" module using the darwin-arm64 runtime'>
-
-    This may be due to an outdated version of node. Try the following:
-    1. Remove the currently-installed version of the CLI: `npm remove -g mint`
-    2. Upgrade to Node v19 or higher.
-    3. Reinstall the CLI: `npm i -g mint`
-
+  <Accordion icon="copy" title="Quick Setup">
+    1. Generate Atlassian API token from account settings 
+    2. Configure PUG with your Confluence credentials
+    3. Add your Confluence spaces
+    4. Export documentation directly to wiki
   </Accordion>
+    <Accordion icon="copy" title="Configuration on PUG">
+    **Username:** Your Confluence email address
 
-  <Accordion title="Issue: Encountering an unknown error">
-  
-    Solution: Go to the root of your device and delete the `~/.mintlify` folder. Then run `mint dev` again.
+    **API Token:** Generated from Atlassian account
+
+    **Confluence URL:** Your organization’s Confluence URL
   </Accordion>
 </AccordionGroup>
 
-Curious about what changed in the latest CLI version? Check out the [CLI changelog](https://www.npmjs.com/package/mintlify?activeTab=versions).
+
+### Notion Integration
+Export to Notion databases for team collaboration and knowledge management.
+
+<AccordionGroup>
+  <Accordion icon="copy" title="Quick Setup">
+  1. Create Notion integration at notion.so/my-integrations 
+  2. Set up a documentation database in Notion
+  3. Share database with your PUG integration
+  4. Configure PUG with integration token
+  </Accordion>
+</AccordionGroup>
+
+
+### Bulk Export
+Export all documents at once
+
+<AccordionGroup>
+  <Accordion icon="copy" title="Steps">
+  1. Run “PUG: Export Documentation”
+  2. Select your preferred format
+  3. Choose “Export All” or select specific files
+  </Accordion>
+</AccordionGroup>
+
+
