--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -3,6 +3,14 @@ title: "Quickstart"
 description: "Start building awesome documentation in minutes"
 ---
 
+<video
+  autoPlay
+  muted
+  loop
+  playsInline
+  className="w-full aspect-video rounded-xl"
+  src="/videos/Pug_And_Logo_Animation.mp4"
+></video>
 
 ### Step 1: Installation
 
